objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Lead_Stage__c</fullName>
        <label>Lead Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nurture</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Status_to_map_to_Contact__c</fullName>
        <formula>TEXT(Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Status to map to Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>ABM</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lost_Date__c</fullName>
        <description>Date when the Lead Stage is set to &quot;Lost&quot; for Lost Reasons other than &apos;Bad Email&apos;, &apos;Bad Phone&apos;, &apos;Bad Email &amp; Bad Phone&apos;, and &apos;Changed Organization&apos;. Created this field for reporting purposes.</description>
        <inlineHelpText>Date when the Lead Stage is set to &quot;Lost&quot; for Lost Reasons other than &apos;Bad Email&apos;, &apos;Bad Phone&apos;, &apos;Bad Email &amp; Bad Phone&apos;, and &apos;Changed Organization&apos;. Created this field for reporting purposes.</inlineHelpText>
        <label>Lost Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lost_Lead_Status__c</fullName>
        <description>Lead Status when the Lead Stage is set to &quot;Lost&quot; for Lost Reasons other than &apos;Bad Email&apos;, &apos;Bad Phone&apos;, &apos;Bad Email &amp; Bad Phone&apos;, and &apos;Changed Organization&apos;. Created this field for reporting purposes.</description>
        <inlineHelpText>Lead Status when the Lead Stage is set to &quot;Lost&quot; for Lost Reasons other than &apos;Bad Email&apos;, &apos;Bad Phone&apos;, &apos;Bad Email &amp; Bad Phone&apos;, and &apos;Changed Organization&apos;. Created this field for reporting purposes.</inlineHelpText>
        <label>Lost Lead Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Lost_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MA_Notes__c</fullName>
        <description>Additional Notes from Market Analysts.</description>
        <inlineHelpText>Additional Notes from Market Analysts.</inlineHelpText>
        <label>MA Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MA_Review_Date__c</fullName>
        <description>Date an MA reviewed this lead for demographic info</description>
        <inlineHelpText>Date an MA reviewed this lead for demographic info</inlineHelpText>
        <label>MA Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Macthed_Account_SFDC_Validation_Status__c</fullName>
        <formula>TEXT(algnlta__Matched_Account__r.SFDC_Validation_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Matched Account SFDC Validation Status.</inlineHelpText>
        <label>Matched Account SFDC Validation Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched_Account_ABM_Key_Account_Current__c</fullName>
        <description>Created this field for reportign purpose.</description>
        <formula>algnlta__Matched_Account__r.ABM_Key_Account_Current_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ABM Key Account Current Date of the Macthed Account.</inlineHelpText>
        <label>Matched Account ABM Key Account Current</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Matched_Account_Account_Type__c</fullName>
        <formula>TEXT(algnlta__Matched_Account__r.Account_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Matched Account Account Type</inlineHelpText>
        <label>Matched Account Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched_Account_G2_Title_By_Product__c</fullName>
        <formula>If( ISBLANK(algnlta__Matched_Account__r.G2_Title_by_Product__c), &quot;None&quot;,  algnlta__Matched_Account__r.G2_Title_by_Product__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>G2 Title by Product from the matched Account record.</inlineHelpText>
        <label>Matched Account G2 Title By Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched_Account_Owner__c</fullName>
        <formula>algnlta__Matched_Account__r.Owner.FirstName  &amp; &quot; &quot; &amp; algnlta__Matched_Account__r.Owner.LastName</formula>
        <label>Matched Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched_Account_SDR__c</fullName>
        <formula>algnlta__Matched_Account__r.SDR_Owner__r.FirstName &amp; &quot; &quot; &amp;  algnlta__Matched_Account__r.SDR_Owner__r.LastName</formula>
        <label>Matched Account SDR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched_Account_SFDC_Status_Validated_On__c</fullName>
        <formula>algnlta__Matched_Account__r.SFDC_Status_Validated_On_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Matched Account SFDC Status Validated On Date.</inlineHelpText>
        <label>Matched Account SFDC Status Validated On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Matched_Account_Status__c</fullName>
        <formula>algnlta__Matched_Account__r.Customer_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Matched Account Customer Status.</inlineHelpText>
        <label>Matched Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New__c</fullName>
        <defaultValue>true</defaultValue>
        <label>New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Step_Date__c</fullName>
        <label>Next Step Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Attachments__c</fullName>
        <label>No.of Attachments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Call_Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total number of Outreach.io activities made for Task Type &quot;Call&quot;.</inlineHelpText>
        <label>No. of Call Attempts</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Email_Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total number of Outreach.io activities made for Task Type &quot;Email&quot;.</inlineHelpText>
        <label>No. of Email Attempts</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Users__c</fullName>
        <description>Number of users for CI/CD</description>
        <inlineHelpText>Please enter numeric value only.</inlineHelpText>
        <label>No. of CI/CD users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Vault_users__c</fullName>
        <description>Number of users for Vault</description>
        <inlineHelpText>Please enter numeric value only.</inlineHelpText>
        <label>No. of Vault users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_Fresh_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if lead is from a current customer, SPAM, other not lead source</description>
        <inlineHelpText>Check if lead is from a current customer, SPAM, other not lead source</inlineHelpText>
        <label>Not Fresh Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nurture_Program__c</fullName>
        <label>Nurture Program</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Nurture_Program</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OnPrem_IDE__c</fullName>
        <label>OnPrem IDE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OnPrem_Id__c</fullName>
        <label>OnPrem Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnPrem_LOC_Avg__c</fullName>
        <label>OnPrem LOC Avg</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OnPrem_LastUsage__c</fullName>
        <label>OnPrem LastUsage</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OnPrem_License_Ide__c</fullName>
        <label>OnPrem License Ide</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OnPrem_License_Loc__c</fullName>
        <label>OnPrem License Loc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OnPrem_Loc_MAX__c</fullName>
        <label>OnPrem Loc MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OnPrem_Notes__c</fullName>
        <label>OnPrem Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnPrem_Projects__c</fullName>
        <label>OnPrem Projects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OptIn_Legal__c</fullName>
        <label>OptIn Legal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opt_Events__c</fullName>
        <label>OptIn Events</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opt_Newsletter__c</fullName>
        <label>OptIn Newsletter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opt_Other_Products__c</fullName>
        <label>OptIn Other Products</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opt_Product_Updates__c</fullName>
        <label>OptIn Updates</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Competitors__c</fullName>
        <label>Other Competitors</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Integration__c</fullName>
        <inlineHelpText>Specify the name of the other Integration.</inlineHelpText>
        <label>Other Integration</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Persona__c</fullName>
        <label>Other Persona</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Product_Interests__c</fullName>
        <label>Other Product Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ARvault</fullName>
                </value>
                <value>
                    <fullName>ARMule</fullName>
                </value>
                <value>
                    <fullName>AutoRABIT</fullName>
                </value>
                <value>
                    <fullName>AutoRABIT DX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Status__c</fullName>
        <formula>Owner:User.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lead Owner Status. True for Active.</inlineHelpText>
        <label>Owner Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Enterprise__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CodeScan: AR Compete</fullName>
                </value>
                <value>
                    <fullName>Corporate Sales</fullName>
                </value>
                <value>
                    <fullName>Emerging Market</fullName>
                    <isActive>false</isActive>
                    <label>Emerging Market</label>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                    <isActive>false</isActive>
                    <label>Government</label>
                </value>
                <value>
                    <fullName>Mid-market</fullName>
                    <isActive>false</isActive>
                    <label>Mid-market</label>
                </value>
                <value>
                    <fullName>Non-profit</fullName>
                    <isActive>false</isActive>
                    <label>Non-profit</label>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Partner Prospect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Margin__c</fullName>
        <label>Partner Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <label>Partner Name (Old)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Consulting/Implementation Partner (CP)</fullName>
                    <isActive>false</isActive>
                    <label>Consulting/Implementation Partner (CP)</label>
                </value>
                <value>
                    <fullName>Independent Software Vendor (ISV)</fullName>
                    <isActive>false</isActive>
                    <label>Independent Software Vendor (ISV)</label>
                </value>
                <value>
                    <fullName>Managed Service Provider (MSP)</fullName>
                    <isActive>false</isActive>
                    <label>Managed Service Provider (MSP)</label>
                </value>
                <value>
                    <fullName>Partner Prospect</fullName>
                </value>
                <value>
                    <fullName>Referral Partner</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>System Integrator (SI)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Persona__c</fullName>
        <label>Persona</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>CXO&apos;s</fullName>
                </value>
                <value>
                    <fullName>Developer/Admin</fullName>
                </value>
                <value>
                    <fullName>Head/VP/Director</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>MVP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Sr./Leads/Manager/Heads</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pick_a_Date__c</fullName>
        <description>Created for Dreamforce RSVP Forms in Pardot.</description>
        <inlineHelpText>Happy Hour Form Date.</inlineHelpText>
        <label>Pick a Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tuesday, September 20</fullName>
                </value>
                <value>
                    <fullName>Wednesday, September 21</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potential_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Primary Lead of the same Org/ Account/ Opportunity</inlineHelpText>
        <label>Primary Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prior_Lead_Status__c</fullName>
        <inlineHelpText>Previous Lead Status we had before it changed to the current one.</inlineHelpText>
        <label>Prior Lead Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Priority Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <inlineHelpText>Product Interest based on First Activity on Pardot.</inlineHelpText>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CodeScan</fullName>
                </value>
                <value>
                    <fullName>AutoRABIT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Lost__c</fullName>
        <description>Lead Reason when the Lead Stage is set to &quot;Lost&quot; for Lost Reasons other than &apos;Bad Email&apos;, &apos;Bad Phone&apos;, &apos;Bad Email &amp; Bad Phone&apos;, and &apos;Changed Organization&apos;. Created this field for reporting purposes.</description>
        <inlineHelpText>Lead Reason when the Lead Stage is set to &quot;Lost&quot; for Lost Reasons other than &apos;Bad Email&apos;, &apos;Bad Phone&apos;, &apos;Bad Email &amp; Bad Phone&apos;, and &apos;Changed Organization&apos;. Created this field for reporting purposes.</inlineHelpText>
        <label>Reason for Lost</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recent_Conversation_Date__c</fullName>
        <inlineHelpText>Field mapped to Recent Conversation Date in Hubspot.</inlineHelpText>
        <label>Recent Conversation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Recent_Conversation__c</fullName>
        <inlineHelpText>Field mapped to Recent Conversation in Hubspot.</inlineHelpText>
        <label>Recent Conversation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Owner__c</fullName>
        <label>Record Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDR_Name__c</fullName>
        <label>SDR Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arvind Tripathy</fullName>
                </value>
                <value>
                    <fullName>Christina Blanco</fullName>
                </value>
                <value>
                    <fullName>Krishna Chaitanya</fullName>
                </value>
                <value>
                    <fullName>Nick Garcia</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Sherdah Moca</fullName>
                </value>
                <value>
                    <fullName>Venkatesh Thadanola</fullName>
                </value>
                <value>
                    <fullName>Belinda Trevor</fullName>
                </value>
                <value>
                    <fullName>Belle Akbari</fullName>
                    <isActive>false</isActive>
                    <label>Belle Akbari</label>
                </value>
                <value>
                    <fullName>Shiva Kumar Gatla</fullName>
                    <isActive>false</isActive>
                    <label>Shiva Kumar Gatla</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDR_Notes__c</fullName>
        <description>Shows customers&apos; comments while being contacted</description>
        <label>SDR Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDR__c</fullName>
        <label>SDR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads (Secondary Campaign)</relationshipLabel>
        <relationshipName>campaign2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_Lead_Source__c</fullName>
        <label>Secondary Lead Source</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_Owner_Record_Owner_same__c</fullName>
        <formula>If(  ( Current_Sequence_User_Name__c =  ( Owner:User.FirstName  &amp;  Owner:User.LastName ) ), &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To see if Outreach.io Serquence Owner and Lead Owner are same or not.</inlineHelpText>
        <label>Sequence Owner &amp; Record Owner same?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Package__c</fullName>
        <inlineHelpText>This field is used in the Website - Plans - Request a Quote Form.</inlineHelpText>
        <label>Success Package</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Success_Package</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suggested_Record_Owner__c</fullName>
        <formula>CASESAFEID(IF(algnlta__Matched_Account__r.SDR_Owner__r.IsActive = true &amp;&amp; NOT(ISBLANK(algnlta__Matched_Account__r.SDR_Owner__c)), algnlta__Matched_Account__r.SDR_Owner__c,
IF(algnlta__Matched_Account__r.Owner.IsActive = true &amp;&amp; NOT(ISBLANK(algnlta__Matched_Account__r.OwnerId)), algnlta__Matched_Account__r.OwnerId,
&apos;0050K00000BQdcGQAT&apos;)))</formula>
        <label>Suggested Record Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <label>Tag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tags</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <inlineHelpText>Enter the Time Zone of the client  (Ex: EST, PST, IST etc.)</inlineHelpText>
        <label>Time Zone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Category_Score__c</fullName>
        <description>Score of Title Category</description>
        <label>Title Category Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Copper</fullName>
                </value>
                <value>
                    <fullName>Tin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_Category__c</fullName>
        <label>Title Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Level__c</fullName>
        <label>Title Level</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Score_Formula__c</fullName>
        <formula>IF(CONTAINS(&quot;Salesforce::SFDC::SF::CRM::DevOps::&apos;CI/CD&apos;::&apos;Enterprise Applications&apos;::Architect::Release::Backup::&apos;Business Systems&apos;::nCino&quot;,Title), &quot;Gold&quot;, 
&quot;Tin&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title Score_Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Score__c</fullName>
        <description>Qualitative score for the person&apos;s title representing someone who wants to purchase AutoRABIT software.</description>
        <label>Title Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Copper</fullName>
                </value>
                <value>
                    <fullName>Tin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <formula>Text(SDR_Name__c) &amp;  Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unqualified_Reason__c</fullName>
        <label>Unqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Timing</fullName>
                </value>
                <value>
                    <fullName>No Buying Authority</fullName>
                </value>
                <value>
                    <fullName>Missing Feature</fullName>
                </value>
                <value>
                    <fullName>DNC</fullName>
                </value>
                <value>
                    <fullName>Went Cold</fullName>
                </value>
                <value>
                    <fullName>Using Competitor</fullName>
                </value>
                <value>
                    <fullName>Not Fresh Lead</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unqualified_tStamp__c</fullName>
        <description>Date/time that Lead was DQ</description>
        <label>Unqualified tStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Using_SFDC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Using SFDC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wrong_Owner__c</fullName>
        <formula>(OwnerId &lt;&gt; BLANKVALUE( algnlta__Matched_Account__r.SDR_Owner__c , algnlta__Matched_Account__r.OwnerId)) &amp;&amp; (LEFT(OwnerId, 3)=&quot;005&quot;)</formula>
        <label>Wrong Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1_Lead_Status_In__c</fullName>
        <description>Created for reporting purposes. Date Lead, Lead Status moved into &quot;1-Lead&quot;.</description>
        <inlineHelpText>Date Lead, Lead Status moved into &quot;1-Lead&quot;.</inlineHelpText>
        <label>1-Lead Status In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X1_Lead_Status_Out__c</fullName>
        <description>Created for reporting purposes. Date Lead, Lead Status move out of &quot;1-Lead&quot;.</description>
        <inlineHelpText>Date Lead, Lead Status move out of &quot;1-Lead&quot;.</inlineHelpText>
        <label>1-Lead Status Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X2_Subscriber_Status_In__c</fullName>
        <description>Created for reporting purposes. Date Lead, Lead Status moved into &quot;2-Subscriber&quot;.</description>
        <inlineHelpText>Date Lead, Lead Status moved into &quot;2-Subscriber&quot;.</inlineHelpText>
        <label>2-Subscriber Status In</label>
        <type>DateTime</type>
    </fields>
</CustomObject>